--- a/index.html
+++ b/index.html
@@ -2,57 +2,69 @@
 <html>
     <head></head>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-        <title>OMDb API</title>
+        <title>AnimeRec</title>
+        <link rel="stylesheet" href="css/virtual-select.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <script src="https://kit.fontawesome.com/42d5989152.js" crossorigin="anonymous"></script>
+
+
+
+
         <link rel="stylesheet" href="css/style.css">
     </head>
+
+
     <body>
         <!-- Navbar -->
         <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="https://github.com/lukes-code" target="_blank" id="brand"><i class="fab fa-github"></i>&nbsp;lukes-code</a>
+                    <h3>AnimeRec</h3>
                 </div>
             </div>
         </nav>
         <!-- Search bar -->
         <div class="container">
            <div class="jumbotron" id="search-jumbo">
-               <h5 class="text-center">The Open Movie Database</h5>
-               <form id="searchForm">
-                   <input autocomplete="off" type="text" class="form-control" id="searchText" placeholder="Search...">
+               <form id="TitleForm">
+                   <input autocomplete="off" type="text" class="form-control" id="titleText" placeholder="Enter an Anime Title...">
                    <ul class="suggestions">
-                
+
                   </ul>
                </form>
-               <!-- Other links -->
-                <div class="main-links">
-                    <h6 class="myFavourites" id="favouriteLinks">&nbsp;Favourites</h6>
-                    <h6 class="randomMovie" id="favouriteLinks"><a href="movie-random.html" class="no-link-color">&nbsp;I'm feeling lucky, punk!</a></h6>
-                    <!-- <h6 class="favourites" id="favouriteLinks">&nbsp;Luke's Favourites</h6> -->
-                </div>
+               <div>
+                <select id="multi_option" multiple name="native-select" placeholder="Select Grenres to search by..." data-silent-initial-value-set="false">
+
+                </select>
+
+            <script type="text/javascript" src="js/virtual-select.min.js"></script>
+            <script type="text/javascript">
+                VirtualSelect.init({
+                    ele: '#multi_option'
+                });
+            </script>
+
+               <button class ="genreSearchButton" id ="genreClick">Search by Genre</button>
+             </div>
            </div>
        </div>
+       <div class="genreSearch" id="genreSearch"></div>
         <div class="noResult" id="noResult">
-            <img src="img/the-force.svg" alt="TheForce" id="theForce"/>
+
         </div>
-       <p id="no-listings" class="no-listings">Find your movie by searching!</p>
-       <!-- Populated movies -->
+       <p id="no-listings" class="no-listings">Find your anime by searching!</p>
+       <!-- Populated animes -->
        <div class="container">
            <div id="movies" class="row">
            </div>
        </div>
-       <!-- Socials -->
-        <div class="socials">
-            <a href="https://github.com/lukes-code" target="_blank" id="github"><i class="fab fa-2x fa-github-square" aria-hidden="true"></i></a>
-            <a href="https://instagram.com/lukes.code" target="_blank" id="instagram"><i class="fab fa-2x fa-instagram" aria-hidden="true"></i></a>
-        </div>
-       <!-- JQuery -->
+
        <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
        <!-- Axios -->
        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
        <!-- Main JS -->
        <script src="js/main.js"></script>
+        <!-- GenreForm JS -->
+        <script src="js/genreForm.js"></script>
     </body>
 </html>
